# the-SIS-scheme-based-on-FHE

./: CMakeLists.txt  README.md
data/: ckks.txt  vector_fx0.txt  vector_fx1.txt  vector_fx2.txt  vector_fx3.txt  x_plaintext0.txt  x_plaintext1.txt  x_plaintext2.txt  x_plaintext3.txt  xid4.txt
include/: PlainProcess.h  SealSchme.h  baseClass.h  cipherProcess.h  math_test.h  mymath.h  tools.h
plugins/SEAL/include/seal/util/: config.h  locks.h
plugins/SEAL/lib/cmake/SEAL/: SEALConfigVersion.cmake  SEALTargets-release.cmake  SEALTargets.cmake
src/: CKKS.cpp  PlainProcess.cpp  baseClass.cpp  math_test.cpp  mymath.cpp  tools.cpp
